--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </header>
-
+    <!--Second try-->
     <!-- Portfolio Grid Section -->
     <section id="portfolio">
         <div class="container">
